CVS code -
- General:
	- Miscellaneous comment fixes. (DLR)
	- Remove unnecessary #ifdef around termios.h #include in nano.c.
	  (DLR)
- winio.c:
  edit_scroll()
	- Redraw the lines before and after the scrolled region even if
	  the scrolled region was only one line.  This fixes a display
	  problem that occurs after doing a search that scrolls the
	  screen down one line and leaves the cursor on the last line of
	  the screen, in which case we need to update the line after the
	  scrolled region. (DLR)

GNU nano 1.3.10 - 2005.12.23
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Add the ability to scroll up or down single lines without
	  scrolling the cursor, via Meta-- and Meta-+.  Note that this
	  is disabled when NANO_SMALL is defined.  New functions
	  do_scroll_up() and do_scroll_down(); changes to
	  shortcut_init(). (DLR, suggested by Mike Frysinger)
	- Properly handle mouse clicks on the statusbar prompt text.
	  New functions statusbar_xplustabs() and
	  get_statusbar_page_start(); changes to do_statusbar_mouse(),
	  nanoget_repaint(), nanogetstr(), and statusq(). (DLR)
	- Since the statusbar prompt code needs at least 4 columns in
	  order to work properly, make that the minimum number of
	  columns that nano requires in order to run, and remove
	  assertions and code that make use of a smaller number of
	  columns.  Changes to window_init(), nanoget_repaint(),
	  titlebar(), statusbar(), and get_page_start(). (DLR)
	- Move get_page_start(), xplustabs(), actual_x(), strnlenpt(),
	  strlenpt(), check_linenumbers(), dump_buffer(), and
	  dump_buffer_reverse() from winio.c to utils.c, as they're
	  really utility functions. (DLR)
	- Add missing stdio.h #include to text.c and winio.c, and remove
	  unneeded sys/wait.h #include from files.c. (DLR)
	- Move functions specific to the statusbar prompt to their own
	  source file, adjust related variables accordingly, and rename