@@ -6,7 +6,7 @@
 .\" Public License for copying conditions.  There is NO warranty.
 .\"
 .\" $Id$
-.TH NANO 1 "version 1.3.10" "November 21, 2005"
+.TH NANO 1 "version 1.3.10" "January 02, 2006"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 
@@ -84,8 +84,8 @@ Use the blank line below the titlebar as extra editing space.
 .TP
 .B \-Q \fIstr\fP (\-\-quotestr=\fIstr\fP)
 Set the quoting string for justifying.  The default is
-"^([\ \\t]*[|>:}#])+" if regular expression support is available, or
-">\ " otherwise.
+"\fI^([\ \\t]*[#:>\\|}])+\fP" if regular expression support is
+available, or "\fI>\ \fP" otherwise.
 .TP
 .B \-R (\-\-restricted)
 Restricted mode: Don't read or write to any file not specified on the
